force-app/main/default/objects/sfdo_grants__GrantsManagementSettings__mdt/sfdo_grants__GrantsManagementSettings__mdt.object-meta.xml
<CustomObject>
    <label>Grants Management Settings</label>
    <pluralLabel>Grants Management Settings</pluralLabel>
</CustomObject>