force-app/main/default/objects/sfdo_grants__GrantsManagementSettings__mdt/fields/sfdo_grants__CollaboratorInvitationCertificateName__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__CollaboratorInvitationCertificateName__c</fullName>
    <inlineHelpText>Certificate Unique Name used to sign Funding Request Invitation tokens.</inlineHelpText>
    <label>Collaborator Invitation Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>