force-app/main/default/objects/sfdo_grants__GrantsManagementSettings__mdt/fields/sfdo_grants__CollaboratorInvitationTimeLength__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__CollaboratorInvitationTimeLength__c</fullName>
    <defaultValue>604800</defaultValue>
    <inlineHelpText>Number of seconds for which the Funding Request Collaborator Invitations are valid. Default is 7 days.</inlineHelpText>
    <label>Collaborator Invitation Time Length</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>