force-app/main/default/objects/sfdo_grants__GrantsManagementSettings__mdt/fields/sfdo_grants__CollaboratorInvitationUrl__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__CollaboratorInvitationUrl__c</fullName>
    <description>URL for where users view collaboration invitations in the grantee portal.</description>
    <label>Collaborator Invitation URL</label>
    <type>Url</type>
</CustomField>