force-app/main/default/objects/sfdo_grants__GrantsManagementSettings__mdt/fields/sfdo_grants__GrantReviewPortalUrl__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__GrantReviewPortalUrl__c</fullName>
    <description>The URL of the Review object in the portal.</description>
    <inlineHelpText>The URL of the Review object in the portal.</inlineHelpText>
    <label>Grant Review Portal URL</label>
    <type>Url</type>
</CustomField>