force-app/main/default/objects/sfdo_grants__GrantsManagementSettings__mdt/fields/sfdo_grants__IsFundingRequestCollaborationEnabled__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__IsFundingRequestCollaborationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow users to add collaborators to Funding Requests in Salesforce and through the grantseeker portal.</description>
    <inlineHelpText>Allow users to add collaborators to Funding Requests in Salesforce and through the grantseeker portal.</inlineHelpText>
    <label>Funding Request Collaboration</label>
    <type>Checkbox</type>
</CustomField>