force-app/main/default/objects/sfdo_grants__GrantsManagementSettings__mdt/fields/sfdo_grants__SalesforceOrgUrl__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__SalesforceOrgUrl__c</fullName>
    <description>The URL of this Salesforce org.</description>
    <label>Salesforce Org URL</label>
    <type>Url</type>
</CustomField>